--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,8 +1,7 @@
 [uwsgi]
-module = main:app
+module = main:server
 master = true
 processes = 4
-threads = 2
 socket = myapp.sock
 chmod-socket = 660
 vacuum = true
